Fixed uncenteredTile38 logo on small screens

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -525,6 +525,10 @@ div.more {
     justify-content: center;
   }
 
+  .fixedHeaderContainer header img {
+    margin-right: 0;
+  }
+
   /* remove white space b/t log and navbar */
   ul.nav-site.nav-site-internal {
     margin-top: 60px;
